<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:id="@+id/btn_detil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nama_pengutang_list_text"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="textEnd"
                android:text="@string/jumlah_hutang_list_text"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_nama_pengutang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:text="@string/dummy_nama"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_jumlah_hutang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:textAlignment="textEnd"
                android:text="@string/dummy_jumlah"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/kasir_list_text"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="textEnd"
                android:text="@string/tanggal_hutang_list_text"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_nama_kasir"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:text="@string/dummy_nama"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_tanggal_utang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:textAlignment="textEnd"
                android:text="@string/dummy_tanggal"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_edit"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/edit_text"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle,NestedWeights" />
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_delete"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/delete_text"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>